setting up mediaelement.js

--- a/Themes/WellCoded/resources/less/main.less
+++ b/Themes/WellCoded/resources/less/main.less
@@ -5,6 +5,7 @@
 @import (inline) "../vendor/prism/themes/prism.css";
 @import "variables.less";
 @import "bootswatch";
+@import (inline) "mediaelements/mediaelementplayer.css";
 
 /* Homepage */
 body {
