--- a/Themes/WellCoded/assets/css/style.css
+++ b/Themes/WellCoded/assets/css/style.css
@@ -6,8 +6,63 @@
 	Project Name: SOLID - Bootstrap 3 Theme
 	Version: 1.0
 	URL: http://alvarez.is
-	
-################################################################# */ 
+
+################################################################# */
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+
+body {
+    line-height: 1;
+}
+
+ol, ul {
+    list-style: none;
+}
+
+blockquote, q {
+    quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,700,900);
 @import url(http://fonts.googleapis.com/css?family=Lato:400,900);
 @import url("prettyPhoto.css") screen;
@@ -16,287 +71,299 @@
 /*	################################################################
 	1. GENERAL STRUCTURES
 ################################################################# */
-	* { 
-		margin: 0;
-		padding: 0px;
-	} 
-
-body { 
-	background: #ffffff; 
-	margin: 0; 
-	height: 100%; 
-	color: #384452;
-	font-family: 'Lato', sans-serif;
-	font-weight: 400;
-	}
-
-h1, h2, h3, h4, h5, h6 {
-	font-family: 'Raleway', sans-serif;
-	font-weight: 700;
+* {
+    margin: 0;
+    padding: 0px;
 }
 
-p { 
-	padding: 0; 
-	margin-bottom: 12px; 
-	font-family: 'Lato', sans-serif;
-	font-weight: 400;
-	font-size: 14px; 
-	line-height: 24px;
-	color: #384452; 
-	margin-top: 10px; 
+body {
+    background: #ffffff;
+    margin: 0;
+    height: 100%;
+    color: #384452;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+}
+
+p {
+    padding: 0;
+    margin-bottom: 12px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    font-size: 1em;
+    line-height: 24px;
+    color: #384452;
+    margin-top: 10px;
 }
 
 img {
-	height: auto;
-	max-width: 100%;
+    height: auto;
+    max-width: 100%;
 }
 
-a { 
-	padding: 0;
-	margin: 0;
-	text-decoration: none; 
-	-webkit-transition: background-color .4s linear, color .4s linear;
-	-moz-transition: background-color .4s linear, color .4s linear;
-	-o-transition: background-color .4s linear, color .4s linear;
-	-ms-transition: background-color .4s linear, color .4s linear;
-	transition: background-color .4s linear, color .4s linear;
+a {
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    -webkit-transition: background-color .4s linear, color .4s linear;
+    -moz-transition: background-color .4s linear, color .4s linear;
+    -o-transition: background-color .4s linear, color .4s linear;
+    -ms-transition: background-color .4s linear, color .4s linear;
+    transition: background-color .4s linear, color .4s linear;
 }
+
 a:hover,
 a:focus {
-  text-decoration: none;
-  color:#01b2fe;
+    text-decoration: none;
+    color: #01b2fe;
 }
 
-::-moz-selection  {
-	color: #fff;
-	text-shadow:none;
-	background:#2B2E31;
+::-moz-selection {
+    color: #fff;
+    text-shadow: none;
+    background: #2B2E31;
 }
+
 ::selection {
-	color: #fff;
-	text-shadow:none;
-	background:#2B2E31;
+    color: #fff;
+    text-shadow: none;
+    background: #2B2E31;
 }
 
 .centered {
-	text-align: center
+    text-align: center
 }
 
 /*	################################################################
 	BOOTSTRAP MODIFICATIONS & TWEAKS
 ################################################################# */
 .navbar {
-	min-height: 70px;
-	padding-top: 10px;
-	margin-bottom: 0px;
+    min-height: 70px;
+    padding-top: 10px;
+    margin-bottom: 0px;
 }
 
 .navbar-brand {
-	font-family: 'Raleway', sans-serif;
-	font-weight: 900;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 900;
 }
 
 .navbar-header .navbar-brand {
-	color: white;
+    color: white;
 }
 
 .navbar-default .navbar-nav > li > a {
-	color: white;
-	font-weight: 700;
-	font-size: 12px;
+    color: white;
+    font-weight: 700;
+    font-size: .85em;
 }
 
 .navbar-default .navbar-nav > li > a:hover {
-	color: #00b3fe;
+    color: #00b3fe;
 }
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-	color: #00b3fe;
-	background-color: transparent;
+    color: #00b3fe;
+    background-color: transparent;
 }
 
 .navbar-default {
-	background-color: #384452;
-	border-color: transparent;
+    background-color: #384452;
+    border-color: transparent;
 }
 
 .dropdown-menu {
-	background: #384452;
+    background: #384452;
 }
 
 .dropdown-menu > li > a {
-	color: white;
-	font-weight: 700;
-	font-size: 12px;
+    color: white;
+    font-weight: 700;
+    font-size: .75em;
 }
 
 .btn-theme {
-  color: #fff;
-  background-color: #384452;
-  border-color: #384452;
-  margin: 4px;
+    color: #fff;
+    background-color: #384452;
+    border-color: #384452;
+    margin: 4px;
 }
+
 .btn-theme:hover,
 .btn-theme:focus,
 .btn-theme:active,
 .btn-theme.active,
 .open .dropdown-toggle.btn-theme {
-  color: #fff;
-  background-color: #00b3fe;
-  border-color: #00b3fe;
+    color: #fff;
+    background-color: #00b3fe;
+    border-color: #00b3fe;
 }
 
 .dmbutton:hover,
 .dmbutton:active,
-.dmbutton:focus{
-	color: #ffffff;
-	background-color: #222222;
-	border-color: #ffffff;
+.dmbutton:focus {
+    color: #ffffff;
+    background-color: #222222;
+    border-color: #ffffff;
 }
+
 .dmbutton {
-	background:rgba(0, 0, 0, 0);
-	border: 1px solid #ffffff;
-	color: #ffffff;
-	-webkit-border-radius: 2px;
-	border-radius: 2px;
-	padding-top: 1.025rem;
-	padding-right: 2.25rem;
-	letter-spacing:0.85px;
-	padding-bottom: 1.0875rem;
-	padding-left: 2.25rem;
-	font-size: 1.55rem;
-	cursor: pointer;
-	font-weight: normal;
-	line-height: normal;
-	margin: 0 0 1.25rem;
-	text-decoration: none;
-	text-align: center;
-	display: inline-block;
-	-webkit-transition: background-color 300ms ease-out;
-	-moz-transition: background-color 300ms ease-out;
-	transition: background-color 300ms ease-out;
-	-webkit-appearance: none;
-	font-weight: normal !important;
+    background: rgba(0, 0, 0, 0);
+    border: 1px solid #ffffff;
+    color: #ffffff;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    padding-top: 1.025rem;
+    padding-right: 2.25rem;
+    letter-spacing: 0.85px;
+    padding-bottom: 1.0875rem;
+    padding-left: 2.25rem;
+    font-size: 1.55rem;
+    cursor: pointer;
+    font-weight: normal;
+    line-height: normal;
+    margin: 0 0 1.25rem;
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+    -webkit-transition: background-color 300ms ease-out;
+    -moz-transition: background-color 300ms ease-out;
+    transition: background-color 300ms ease-out;
+    -webkit-appearance: none;
+    font-weight: normal !important;
 }
 
 .mtb {
-	margin-top: 80px;
-	margin-bottom: 80px;
+    margin-bottom: 80px;
 }
 
 .mb {
-	margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
 .mt {
-	margin-top: 60px;
+    margin-top: 60px;
 }
 
 .hline {
-	border-bottom: 2px solid #384452;
+    border-bottom: 2px solid #384452;
 }
 
 .hline-w {
-	border-bottom: 2px solid #ffffff;
-	margin-bottom: 25px;
+    border-bottom: 2px solid #ffffff;
+    margin-bottom: 25px;
 }
+
 /*	################################################################
 	SITE WRAPS
 ################################################################# */
 
 #headerwrap {
-	background-color: #00b3fe;
-	min-height: 550px;
-	padding-top: 100px;
-	padding-bottom: 0px;
-	text-align: center;
+    background-color: #00b3fe;
+    min-height: 550px;
+    padding-top: 100px;
+    padding-bottom: 0px;
+    text-align: center;
 }
 
 #headerwrap h3, h5 {
-	color: white;
-	font-weight: 400;
+    color: white;
+    font-weight: 400;
 }
 
 #headerwrap h1 {
-	color: white;
-	margin-bottom: 25px;
+    color: white;
+    margin-bottom: 25px;
 }
 
 #headerwrap .img-responsive {
-	margin: 0 auto;
+    margin: 0 auto;
 }
 
 /* Services Wrap */
 #service {
-	margin-top: 100px;
-	margin-bottom: 80px;
+    margin-top: 100px;
+    margin-bottom: 80px;
 }
 
 #service i {
-	color: #00b3fe;
-	font-size: 60px;
-	padding: 15px;
+    color: #00b3fe;
+    font-size: 60px;
+    padding: 15px;
 }
 
 /* Portfolio Wrap */
 #portfoliowrap {
-	padding-top: 60px;
-	margin-bottom: 60px;
-	display: block;
-	text-align: center
+    padding-top: 60px;
+    margin-bottom: 60px;
+    display: block;
+    text-align: center
 }
 
 #portfoliowrap h3 {
-	margin-bottom: 25px;
+    margin-bottom: 25px;
 }
 
 .portfolio {
-	padding:0 !important;
-	margin:0 !important;
-	display:block;
+    padding: 0 !important;
+    margin: 0 !important;
+    display: block;
 }
 
-
-.portfolio-item .title:before {border-radius:0; display:none}
-.portfolio-item p {margin:0px 0 30px;}
-.portfolio-item h3 {margin:-10px 0 10px; font-size:16px; text-transform:uppercase;}
-
-
-.tpl6 h3
-{
-	color:#fff;
-	margin:0;
-	padding:40px 5px 0;
-	font-size:16px;
-	text-transform:uppercase;
-}
-.tpl6 .dmbutton
-{
-	display:inline-block;
-	margin:30px 5px 20px 5px;
-	font-size:13px;
+.portfolio-item .title:before {
+    border-radius: 0;
+    display: none
 }
 
-.tpl6 .bg
-{
-	height:100%;
-	width:100%;
-	background-color:#00b3fe;
-	background-color:rgba(0,179,254,.9);
-	text-align:center;
+.portfolio-item p {
+    margin: 0px 0 30px;
+}
+
+.portfolio-item h3 {
+    margin: -10px 0 10px;
+    font-size: 1em;
+    text-transform: uppercase;
+}
+
+.tpl6 h3 {
+    color: #fff;
+    margin: 0;
+    padding: 40px 5px 0;
+    font-size: 1em;
+    text-transform: uppercase;
+}
+
+.tpl6 .dmbutton {
+    display: inline-block;
+    margin: 30px 5px 20px 5px;
+    font-size: .8em;
+}
+
+.tpl6 .bg {
+    height: 100%;
+    width: 100%;
+    background-color: #00b3fe;
+    background-color: rgba(0, 179, 254, .9);
+    text-align: center;
 }
 
 /* Testimonials Wrap */
 #twrap {
-	background: url(../img/t-back.jpg) no-repeat center top;
-	margin-top: 0px;
-	padding-top:60px;
-	text-align:center;
-	background-attachment: relative;
-	background-position: center center;
-	min-height: 450px;
-	width: 100%;
-	
+    background: url(../img/t-back.jpg) no-repeat center top;
+    margin-top: 0px;
+    padding-top: 60px;
+    text-align: center;
+    background-attachment: relative;
+    background-position: center center;
+    min-height: 450px;
+    width: 100%;
+
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
@@ -309,52 +376,52 @@ a:focus {
 }
 
 #twrap i {
-	font-size: 50px;
-	color: white;
-	margin-bottom: 25px;
+    font-size: 50px;
+    color: white;
+    margin-bottom: 25px;
 }
 
 #twrap p {
-	color: white;
-	font-size: 15px;
-	line-height: 30px;
+    color: white;
+    font-size: 15px;
+    line-height: 30px;
 }
 
 /* clients logo */
 #cwrap {
-	background: #f7f7f7;
-	margin-top: 0px;
-	padding-top: 80px;
-	padding-bottom: 100px;
+    background: #f7f7f7;
+    margin-top: 0px;
+    padding-top: 80px;
+    padding-bottom: 100px;
 }
 
 #cwrap h3 {
-	margin-bottom: 60px;
+    margin-bottom: 60px;
 }
 
 /* Footer */
 #footerwrap {
-	padding-top: 60px;
-	padding-bottom: 60px;
-	background: #384452;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    background: #384452;
 }
 
 #footerwrap p {
-	color: #bfc9d3;
+    color: #bfc9d3;
 }
 
 #footerwrap h4 {
-	color: white;
+    color: white;
 }
 
 #footerwrap i {
-	font-size: 30px;
-	color: #bfc9d3;
-	padding-right: 25px;
+    font-size: 30px;
+    color: #bfc9d3;
+    padding-right: 25px;
 }
 
 #footerwrap i:hover {
-	color: #00b3fe
+    color: #00b3fe
 }
 
 /*	################################################################
@@ -363,53 +430,59 @@ a:focus {
 /* General Tweaks */
 
 #blue {
-	background: #00b3fe;
-	margin-top: 60px;
-	margin-bottom: 60px;
-	padding-top: 25px;
-	padding-bottom: 25px;
+    background: #00b3fe;
+    margin-top: 70px;
+    margin-bottom: 30px;
+    padding: 25px 0;
+    font-size: 1.2em;
 }
 
 #blue h3 {
-	color: white;
-	margin-left: 15px;
+    color: white;
 }
 
 .ctitle {
-	color: #00b3fe;
-	font-weight: 700;
-	margin-bottom: 15px;
+    color: #00b3fe;
+    font-weight: 700;
+    margin-bottom: 15px;
+    font-size: 2em;
 }
 
-csmall {
-	font-size: 12px;
-	color: #b3b3b3;
+small {
+    font-size: .75em;
+    color: #b3b3b3;
 }
+#blue small {
+    display: block;
+    margin-top: 10px;
+    color: #DEDEDE;
+}
+
 csmall2 {
-	font-size: 12px;
-	color: #f39c12
+    font-size: .75em;
+    color: #f39c12
 }
 
 .spacing {
-	margin-top: 40px;
-	margin-bottom: 40px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .badge-theme {
-	background: #00b3fe;
+    background: #00b3fe;
 }
 
 /* Contact Page */
 #contactwrap {
-	background: url(../img/contact.jpg) no-repeat center top;
-	margin-top: -60px;
-	padding-top:0px;
-	text-align:center;
-	background-attachment: relative;
-	background-position: center center;
-	min-height: 400px;
-	width: 100%;
-	
+    background: url(../img/contact.jpg) no-repeat center top;
+    margin-top: -60px;
+    padding-top: 0px;
+    text-align: center;
+    background-attachment: relative;
+    background-position: center center;
+    min-height: 400px;
+    width: 100%;
+
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
@@ -422,39 +495,54 @@ csmall2 {
 }
 
 /* Blog Page */
-.popular-posts { 
-	margin: 0px;
-	padding-left: 0px;
-	}
-	
-.popular-posts li {
-	list-style: none; 
-	margin-bottom: 20px; 
-	min-height: 70px;
+.popular-posts {
+    margin: 0px;
+    padding-left: 0px;
 }
-.popular-posts li a, 
+
+.popular-posts li {
+    list-style: none;
+    margin-bottom: 20px;
+    min-height: 70px;
+}
+
+.popular-posts li a,
 .popular-posts li a:hover {
-	color:#2f2f2f; 
-	text-decoration: none;
-	}
-	
+    color: #2f2f2f;
+    text-decoration: none;
+}
+
 .popular-posts li img {
-	float: left; 
-	margin-right: 20px;
-	}
-	
+    float: left;
+    margin-right: 20px;
+}
+
 .popular-posts li em {
-	font-family: 'Lato', sans-serif;
-	font-size: 12px;
-	color: #b3b3b3
-	}
+    font-family: 'Lato', sans-serif;
+    font-size: .75em;
+    color: #b3b3b3
+}
 
 .popular-posts p {
-	line-height: normal;
-	margin-bottom: auto;
-}	
+    line-height: normal;
+    margin-bottom: auto;
+}
 
 .share i {
-	padding-right: 15px;
-	font-size: 18px;
+    padding-right: 15px;
+    font-size: 18px;
+}
+
+.back-link i {
+    font-size: 46px;
+    color: #fff;
+}
+.podcast-title a {
+    color: #fff;
+    margin-top: 10px;
+}
+/* Media element */
+.mejs-container {
+    margin: 0 auto;
+    margin-bottom: 20px;
 }
