--- a/public/themes/wellcoded/css/style.css
+++ b/public/themes/wellcoded/css/style.css
@@ -401,8 +401,7 @@ a:focus {
 
 /* Footer */
 #footerwrap {
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding: 10px 0;
     background: #384452;
 }
 
