--- a/public/themes/wellcoded/css/style.css
+++ b/public/themes/wellcoded/css/style.css
@@ -111,11 +111,11 @@ a {
     padding: 0;
     margin: 0;
     text-decoration: none;
-    -webkit-transition: background-color .4s linear, color .4s linear;
-    -moz-transition: background-color .4s linear, color .4s linear;
-    -o-transition: background-color .4s linear, color .4s linear;
-    -ms-transition: background-color .4s linear, color .4s linear;
-    transition: background-color .4s linear, color .4s linear;
+    -webkit-transition: background-color .1s linear, color .1s linear;
+    -moz-transition: background-color .1s linear, color .1s linear;
+    -o-transition: background-color .1s linear, color .1s linear;
+    -ms-transition: background-color .1s linear, color .1s linear;
+    transition: background-color .1s linear, color .1s linear;
 }
 
 h2 {
@@ -556,4 +556,9 @@ csmall2 {
 .mejs-container {
     margin: 0 auto;
     margin-bottom: 20px;
+}
+
+.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
+    color: #00b3fe;
+
 }
